--- a/CandidatesTest.Api/appsettings.json
+++ b/CandidatesTest.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "DBConection": {
-    "ConnectionString": "Data Source=(localdb)\\ProjectModels;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\ProjectModels;Initial Catalog=CandidatesDB;Integrated Security=True;Connect Timeout=30;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
